--- a/dev/pug/templates/header.pug
+++ b/dev/pug/templates/header.pug
@@ -14,14 +14,13 @@ html.no-js(lang='es')
 		meta(name='application-name', content='Joshua Torres - Desarrollador Front End')
 		meta(name='msapplication-TileColor', content='##495AF')
 		meta(name='msapplication-TileImage', content='http://www.joshua.cl/mstile-144x144.png')
-		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600')
-		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oswald:700')
-		//- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-		link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css')
 		link(rel='stylesheet', href='css/styles.css')
 		<!--[if lt IE 9]>
 			script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
 		<![endif]-->
+		script(src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js")
+		script.
+			WebFont.load({google: {families: ['Josefin Sans: 300,400,600']}});
 	body.body
 		<!--[if lt IE 10]>
 			p.browserupgrade Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo
