--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -6,14 +6,36 @@ html {
 	color: #535353;
 	height: 100%;
 	background: #fff;
+	line-height: 1.15;
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+
+article, aside, footer, header, nav, section {
+  display: block;
+}
+
+h1 {
+  font-size: 2em;
+  margin: .67em 0;
 }
 
 a {
 	text-decoration: none;
+	background-color: transparent;
+  	-webkit-text-decoration-skip: objects;
 }
 
 p {
 	margin: 0;
+}
+
+img {
+  border-style: none;
+}
+
+svg:not(:root) {
+  overflow: hidden;
 }
 
 .body {
@@ -23,6 +45,7 @@ p {
 	position: relative;
 	border-left: 20px solid #0cb6ff;
 	border-right: 20px solid #495aff;
+	margin: 0;
 	&:before, &:after{
 		width: 100%;
 		height: 20px;
